--- a/public/public/index.html
+++ b/public/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="title">Todo List</div>
+    <div id="title">Todo List xxx</div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
